# dns-checker

./: .gitignore  README.md  main.py  prototype_graph.py  pyproject.toml  requirements.txt  scan.dot  verify_fix.py
dns_checker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/engine/: core.py
src/models/: graph.py
src/scanner/: dns_lookup.py  manager.py  robots_lookup.py  whois_lookup.py
src/strategies/: base.py  dns.py  neighbors.py  parents.py  ptr.py  srv.py  subdomains.py  txt.py
src/tui/: app.py  rich_app.py  textual_app.py  ttk_app.py
src/tui/widgets/: graph.py  ttk_graph.py
tests/: __init__.py  test_dns_lookup.py  test_engine.py  test_robots_lookup.py  test_strategies.py
