[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-checker"
version = "0.1.0"
description = "DNS Scanner with graph visualization"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.4.0",
    "rich",
    "networkx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
